--- a/src/Solnet.KeyStore/Solnet.KeyStore.csproj
+++ b/src/Solnet.KeyStore/Solnet.KeyStore.csproj
@@ -5,8 +5,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+      <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
       <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Solnet.Wallet\Solnet.Wallet.csproj" />
+      <ProjectReference Include="..\Solnet.Util\Solnet.Util.csproj" />
     </ItemGroup>
 
 </Project>
