--- a/src/Solnet.Models/Solnet.Models.csproj
+++ b/src/Solnet.Models/Solnet.Models.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NBitcoin" Version="5.0.77" />
+    </ItemGroup>
+
 </Project>
