--- a/src/Solnet.Util/Solnet.Util.csproj
+++ b/src/Solnet.Util/Solnet.Util.csproj
@@ -5,8 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="HexConverters" />
-      <Folder Include="HexTypes" />
+      <PackageReference Include="NBitcoin" Version="5.0.77" />
+      <PackageReference Include="Portable.BouncyCastle" Version="1.8.2" />
     </ItemGroup>
-
 </Project>
