Small fixes to streaming client. Finished complete unit test for account subscription.

--- a/Solnet.Rpc.Test/Solnet.Rpc.Test.csproj
+++ b/Solnet.Rpc.Test/Solnet.Rpc.Test.csproj
@@ -22,6 +22,12 @@
     <None Update="Resources\AccountSubscribe.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\AccountSubscribeConfirm.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\AccountSubscribeNotification.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
