--- a/src/Solnet.Rpc/Solnet.Rpc.csproj
+++ b/src/Solnet.Rpc/Solnet.Rpc.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>Solnet.Rpc</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Solnet.Wallet\Solnet.Wallet.csproj" />
+    </ItemGroup>
+
 </Project>
