--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,14 +19,9 @@ jobs:
         inputs:
           restoreSolution: '$(solution)'
 
-      - task: DotNetCoreCLI@2
+      - task: ShellScript@2
         inputs:
-          command: 'build'
-          projects: '$(solution)'
-
-      - task: DotNetCoreCLI@2
-        inputs:
-          command: 'test'
+          scriptPath: './build.sh'
 
       - task: PublishCodeCoverageResults@1
         inputs:
@@ -42,17 +37,8 @@ jobs:
         inputs:
           restoreSolution: '$(solution)'
 
-      - task: VSBuild@1
-        inputs:
-          solution: '$(solution)'
-          platform: '$(buildPlatform)'
-          configuration: '$(buildConfiguration)'
+      - powershell: ./build.ps1
 
-      - task: VSTest@2
-        inputs:
-          platform: '$(buildPlatform)'
-          configuration: '$(buildConfiguration)'
-          
       - task: PublishCodeCoverageResults@1
         inputs:
           summaryFileLocation: '$(System.DefaultWorkingDirectory)/code_coverage/results.cobertura.xml'
