Adding program tests and transaction builder tests.

--- a/test/Solnet.Rpc.Test/Solnet.Rpc.Test.csproj
+++ b/test/Solnet.Rpc.Test/Solnet.Rpc.Test.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Solnet.Programs\Solnet.Programs.csproj" />
     <ProjectReference Include="..\..\src\Solnet.Rpc\Solnet.Rpc.csproj" />
   </ItemGroup>
 
