Implementing client interfaces, client factory and adding logging functionality.

--- a/src/Solnet.Rpc/Solnet.Rpc.csproj
+++ b/src/Solnet.Rpc/Solnet.Rpc.csproj
@@ -4,9 +4,12 @@
         <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>Solnet.Rpc</AssemblyName>
         <RootNamespace>Solnet.Rpc</RootNamespace>
-    </PropertyGroup>
+    </PropertyGroup>    
 
     <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>Solnet.Rpc.Test</_Parameter1>
+        </AssemblyAttribute>
       <ProjectReference Include="..\Solnet.Wallet\Solnet.Wallet.csproj" />
     </ItemGroup>
 
