--- a/src/Solnet.Rpc/Solnet.Rpc.csproj
+++ b/src/Solnet.Rpc/Solnet.Rpc.csproj
@@ -10,6 +10,8 @@
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
             <_Parameter1>Solnet.Rpc.Test</_Parameter1>
         </AssemblyAttribute>
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
       <ProjectReference Include="..\Solnet.Wallet\Solnet.Wallet.csproj" />
     </ItemGroup>
 
